# FXUI

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FXUIBuildApp.cmake
base/: CMakeLists.txt
base/include/: fxapplication.h  fxui.h
base/src/base/: fxapplication.cpp
include/: fxbitmap.h  fxcompilerdefs.h  fxdisplay.h  fxfont.h  fxplatformdefs.h  fxrect.h  fxsystypes.h  fxwindow.h
include/base/: fxapplication.h  fxbitmap.h  fxclipboard.h  fxcursor.h  fxdisplay.h  fxfont.h  fxplatformdefs.h  fxplatformexport.h  fxplatformhelper.h  fxplatformuidefs.h  fxplatformuigldefs.h  fxpoint.h  fxrect.h  fxsystypes.h  fxtimeutils.h  fxui.h  fxuicolor.h  fxuidefs.h  fxversion.h  fxview.h  fxwindow.h
include/widgets/: fxbutton.h  fxcheckbox.h  fxcolumlistview.h  fxlistview.h  fxmenubar.h  fxpopupmenu.h  fxprogressbar.h  fxradiobutton.h  fxscrollbar.h  fxslider.h  fxstringview.h  fxtextfield.h  fxtextview.h  fxthrobber.h  fxtoolbar.h  fxtooltip.h  fxwidget.h  fxwidgets.h
include/widgets/dialogs/: fxfiledialog.h  fxmessagebox.h
include/widgets/layout/: fxlayout.h
include/widgets/notifications/: fxnotification.h
include/widgets/theme/: fxtheme.h
shared/layouts/test/: test.xml
src/: fxdisplay.cpp  fxfont.cpp  fxwindow.cpp
src/fxui/: fxapplication.cpp  fxbitmap.cpp  fxdisplay.cpp  fxfont.cpp  fxview.cpp  fxwindow.cpp
src/fxui/platform/amiga/: AmigaApiWindow.h
src/fxui/platform/haiku/: BAplicationInstance.h  BApplicationInstance.cpp  BApplicationInstance.h  BeAPIMenuBar.h  BeAPIView.cpp  BeAPIView.h  BeAPIWindow.cpp  BeAPIWindow.h
src/fxui/platform/macosx/: CocoaAutoreleasePool.h  CocoaAutoreleasePool.mm  MacOSXAPIWindow.h  MacOSXAPIWindow.mm  MacOSXApplication.h  MacOSXApplication.mm
src/fxui/platform/qnx/: QNXAPIWindow.cpp
src/fxui/platform/unix/wayland/: WaylandAPIWindow.cpp  WaylandAPIWindow.h
src/fxui/platform/unix/x11/: X11APIWindow.cpp  X11APIWindow.h
src/fxui/platform/windows/: WindowsApiWindow.h
src/fxui/widgets/: fxbutton.cpp  fxcheckbox.cpp  fxmenubar.cpp  fxpopupmenu.cpp  fxprogressbar.cpp  fxradiobutton.cpp  fxscrollbar.cpp  fxslider.cpp  fxstringview.cpp  fxtextfield.cpp  fxtextview.cpp  fxtoolbar.cpp  fxwidget.cpp
src/test/: CMakeLists.txt  example.cpp  example_init_dpy.cpp  example_init_messagebox.cpp  main.cpp  test_create_window.cpp
src/test/app/: CMakeLists.txt  test_app.cpp
src/test/widgets/: CMakeLists.txt  test_menubar.cpp
src/test/window/: CMakeLists.txt  test_window.cpp
